feature: Implementando variáveis de ambiente

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,4 +16,9 @@ spec:
     spec:
       containers:
         - name: goserver
-          image: "guilhermemmnn/hello-go:v2"
+          image: "guilhermemmnn/hello-go:v3"
+          env:
+            - name: NAME
+              value: "Guilherme"
+            - name: AGE
+              value: "36"
