feature: Injetando ConfigMap na aplicação Go e README

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,18 +16,18 @@ spec:
     spec:
       containers:
         - name: goserver
-          image: "guilhermemmnn/hello-go:v3"
+          image: "guilhermemmnn/hello-go:v4"
           envFrom:
             - configMapRef:
                 name: goserver-env    # Nome do metadata do arquivo configmap-env.yaml
-#          env:
-#            - name: NAME
-#              valueFrom:
-#                configMapKeyRef:
-#                  name: goserver-env    # Nome do metadata do arquivo configmap-env.yaml
-#                  key: NAME             # Nome da chave da variável do arquivo configmap-env.yaml
-#            - name: AGE
-#              valueFrom:
-#                configMapKeyRef:
-#                  name: goserver-env
-#                  key: AGE
+
+          volumeMounts:
+            - mountPath: "/go/myfamily"
+              name: config
+      volumes:
+        - name: config
+          configMap:
+            name: configmap-family
+            items:
+              - key: members
+                path: "family.txt"
