--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,14 +26,15 @@ spec:
             failureThreshold: 1
             initialDelaySeconds: 10      # Aguarda X segundos para começar os testes do readinessProbe
 
-#          livenessProbe:
-#            httpGet:
-#              path: /healthz
-#              port: 8000                # Porta da nossa aplicação
-#            periodSeconds: 5            # Período em segundos que ele executará um teste
-#            failureThreshold: 1         # Quantas vezes ele precisa falhar para reiniciar a aplicação
-#            timeoutSeconds: 1           # Limite em segundos para completar a requisição, caso não complete ele conta uma falha
-#            successThreshold: 1         # Quantas vezes a requisição precisa estar OK para encerrar o teste
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000                # Porta da nossa aplicação
+            periodSeconds: 5            # Período em segundos que ele executará um teste
+            failureThreshold: 1         # Quantas vezes ele precisa falhar para reiniciar a aplicação
+            timeoutSeconds: 1           # Limite em segundos para completar a requisição, caso não complete ele conta uma falha
+            successThreshold: 1         # Quantas vezes a requisição precisa estar OK para encerrar o teste
+            initialDelaySeconds: 15      # Aguarda X segundos para começar os testes do readinessProbe
 
           envFrom:
             - configMapRef:             # Puxa todas as variáveis de ambiente do arquivo abaixo para nossa aplicação
