--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,6 +18,14 @@ spec:
         - name: goserver
           image: "guilhermemmnn/hello-go:v7"
 
+          resources:
+            requests:       # Delimita o mínimo que nosso container precisa para rodar, reservará no sistema a capacidade abaixo
+              cpu: 100m
+              memory: 20Mi
+            limits:         # Delimita o máximo de processamento que nosso container terá
+              cpu: 500m     # Divida esse valor pelo total de vCPU's que seu node possui, e você terá o total de replicas que ele suporta caso todas estejam no limite.
+              memory: 25Mi
+
           startupProbe:
             httpGet:
               path: /healthz
